fix(component): add overflow on main section (refs #5)

--- a/components/src/HubStation/HubStation.scss
+++ b/components/src/HubStation/HubStation.scss
@@ -9,6 +9,7 @@
     .hub-station-content {
       display: flex;
       flex: 1;
+      overflow: auto;
 
       .hub-station-content-view {
         flex: 1;
